# BailBridge-rs

./: .dockerignore  BAIL_APPLICATION_SYSTEM.md  DEPLOYMENT.md  Dockerfile  README.md  render.yaml
BailBridge-rs/: .env.example  .gitignore  Cargo.toml  DATABASE_SETUP.md  QUICK_START.md  README.md  run_bail_migration.ps1  run_bail_migration.sh  setup_database.sql  setup_db.sh  start.sh
BailBridge-rs/migrations/: 001_create_users_table.sql  001_create_users_table_with_grants.sql  002_create_bail_applications_table.sql
BailBridge-rs/src/: config.rs  db.rs  main.rs  models.rs  routes.rs
BailBridge-rs/src/auth/: handlers.rs  jwt.rs  middlewares.rs  mod.rs
BailBridge-rs/src/bail/: handlers.rs  models.rs
bailbridge-frontend/: package-lock.json  package.json
bailbridge-frontend/app/: globals.css  layout.tsx  page.tsx
bailbridge-frontend/app/api/ai-suggestion/: route.ts
bailbridge-frontend/app/dashboard/judge/: page.tsx
bailbridge-frontend/app/dashboard/lawyer/: page.tsx
bailbridge-frontend/app/dashboard/lawyer/cases/: page.tsx
bailbridge-frontend/app/dashboard/user/: page.tsx
bailbridge-frontend/app/dashboard/user/new-application/: page.tsx
bailbridge-frontend/app/login/: page.tsx
bailbridge-frontend/app/signup/: page.tsx
bailbridge-frontend/components/: AISuggestionModal.tsx  ThemeToggle.tsx
bailbridge-frontend/components/ui/: button.tsx  dropdown-menu.tsx
bailbridge-frontend/context/: ThemeContext.tsx
bailbridge-frontend/lib/: api.ts  providers.tsx
